--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,8 +10,8 @@
                 <div id="filters_container">
                     <div id="blue_box"></div>
                     <div id="applied_filters" class="sub_scroll scrollable_div"><span style='color: gray'>&emsp;[none]</span></div>
-                    <input id='remove_filter_button' type='button' value='Delete' class="sub_button_m sub_button" disabled>
-                    <input id='reset_filter_button' type='button' value='Reset' class="sub_button_b sub_button">
+                    <input id='filter_delete_button' type='button' value='Delete' class="sub_button_m sub_button" disabled>
+                    <input id='filter_reset_button' type='button' value='Reset' class="sub_button_b sub_button">
                     <div class="border_title">Filters</div>
                     <div class="cut_border_l"></div>
                     <div class="cut_border_b"></div>
@@ -21,14 +21,14 @@
                     <div id="blue_box"></div>
                     <div id="applied_columns" class="sub_scroll scrollable_div"></div>
                     <input id='column_apply_button' type='button' value='Apply' class="sub_button_m sub_button">
-                    <input id='default_column_button' type='button' value='Default' class="sub_button_b sub_button">
+                    <input id='column_default_button' type='button' value='Default' class="sub_button_b sub_button">
                     <div class="border_title">Columns</div>  
                     <div class="cut_border_l"></div>
                     <div class="cut_border_b"></div>
                     <div id="border_r_c" class="cut_border_r"></div>
                 </div>
-                <div class="text_group">
-                    <input id="search_text" type="input" class="text_input" placeholder="Name" id='name' autocomplete="off">
+                <div id="menu_group">
+                    <input id="search_text" type="input" class="text_input" placeholder="Search for Username..." id='name' autocomplete="off">
                 </div>
             </div>
             <div id ="profile_container" class="hidden">
