Filters can now be removed, too bad there's no filters to remove :)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
                     <div id="blue_box"></div>
                     <div id="applied_filters" class="sub_scroll scrollable_div"><span style='color: gray'>&emsp;[none]</span></div>
                     <input id='filter_delete_button' type='button' value='Delete' class="sub_button_m sub_button" disabled>
-                    <input id='filter_reset_button' type='button' value='Reset' class="sub_button_b sub_button">
+                    <input id='filter_reset_button' type='button' value='Reset' class="sub_button_b sub_button" disabled>
                     <div class="border_title">Filters</div>
                     <div class="cut_border_l"></div>
                     <div class="cut_border_b"></div>
@@ -60,6 +60,6 @@
         <div id="tab2" class="tab">wooa
             <div class="tab_text">Test Tab 2</div>
         </div>
-        <div id="shhh">test</div>
+        <div id="shhh"></div>
     </body>
 </html>
