Fixed bugs with filter screen

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,7 +73,7 @@
                         <input id="filter_inp1" type="text" name="product" class="text_input filter_input" list="" autocomplete="off">
                         <input id="delete_peri_filter_button1" type="button" value="-" class="delete_peri">
                     </div>
-                </div>
+                </div><br>
                 <input id="add_peri_filters_button" type="button" value="+" disabled>
                 <input id="apply_filters_button" type="button" value="Apply">
             </div>
