Add filter ranges & fixed page loading redundancy

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,6 +68,14 @@
             
             <div id="filters_frame" class="hidden frame">
                 <input type="button" value="Close" class="close_frame">
+                <div id="rank_range_div">
+                    #<input id="rank_range_min" type="text" class="text_input num_input rank_input" placeholder="0" maxlength="10" autocomplete="off"> to 
+                    #<input id="rank_range_max" type="text" class="text_input num_input rank_input" placeholder="10000" maxlength="10" autocomplete="off">
+                </div>
+                <div id="edpi_range_div">
+                    <input id="edpi_range_min" type="text" class="text_input num_input edpi_input" placeholder="0" maxlength="5" autocomplete="off"> to 
+                    <input id="edpi_range_max" type="text" class="text_input num_input edpi_input" placeholder="∞" maxlength="5" autocomplete="off">
+                </div>
                 <select id="playstyle_select" class="text_input"></select>
                 <div id="peri_filters">
                     <div id="filter_div1"><br>
