--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,8 +61,8 @@
         <div id="tab1" class="tab">woa
             <div class="tab_text">Test Tab 1</div>
         </div>
-        <div id="tab2" class="tab">wooa
-            <div class="tab_text">Test Tab 2</div>
+        <div id="tab2" class="tab"><a id="login_button">Login</a>
+            <div class="tab_text">osu! Profile</div>
         </div>
         <div id="div_lock" class="hidden">
             
