--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="public/style.css">
         <script src='public/jquery.js'></script>
         <script src='public/script.js'></script>
+        <meta id="user_data" data_test="{{data | safe}}">
     </head>
     <body>
         <div id="top_container">
