--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="public/style.css">
-        <script src='public/jquery.js'></script>
-        <script src='public/script.js'></script>
-        <meta id="user_data" data_test="{{data | safe}}">
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="public/style.css" type="text/css">
+        <script src='public/jquery.js' type="text/javascript"></script>
+        <script src='public/script.js' type="text/javascript"></script>
+        <script type="text/javascript"> let user_data = '{{data | safe}}' </script>
     </head>
     <body>
         <div id="top_container">
@@ -63,7 +65,7 @@
             <div class="tab_text">Test Tab 1</div>
         </div>
         <div id="tab2" class="tab"><a id="login_button">Login</a>
-            <div class="tab_text">osu! Profile</div>
+            <div class="tab_text">Connect osu! Profile</div>
         </div>
         <div id="div_lock" class="hidden">
             
