--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="public/style.css" type="text/css">
         <script src='public/jquery.js' type="text/javascript"></script>
         <script src='public/script.js' type="text/javascript"></script>
-        <script type="text/javascript"> const raw_data = '{{ data | tojson | safe }}' </script>
+        <script type="text/javascript"> const raw_data = '{{ data | tojson | safe }}'; </script>
     </head>
     <body>
         <div id="top_container">
