--- a/frontend/user.html
+++ b/frontend/user.html
@@ -1,10 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="public/user_style.css">
-        <script src='public/jquery.js'></script>
-        <script src='public/user_script.js'></script>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="public/user_style.css" type="text/css">
+        <script src='public/jquery.js' type="text/javascript"></script>
+        <script src='public/user_script.js' type="text/javascript"></script>
+        <script type="text/javascript"> const raw_data = '{{ data | tojson | safe }}' </script>
     </head>
-    <body style="background-color:blue">
+    <body style="background-color:rgb(21, 36, 43);">
         This is a test.
     </body>
 </html>
