--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,13 +80,7 @@
                     <input id="edpi_range_max" type="text" class="text_input num_input edpi_input" placeholder="∞" maxlength="5" autocomplete="off">
                 </div>
                 <select id="playstyle_select" class="text_input"></select>
-                <div id="peri_filters">
-                    <div id="filter_div1"><br>
-                        <select id="filter_sel1" class="text_input filter_select"></select>
-                        <input id="filter_inp1" type="text" name="filter_inp" class="text_input filter_input" list="" autocomplete="off">
-                        <input id="delete_peri_filter_button1" type="button" value="-" class="delete_peri">
-                    </div>
-                </div><br>
+                <div id="peri_filters"></div><br>
                 <input id="add_peri_filters_button" type="button" value="+" disabled>
             </div>
             <div id="profile_frame" class="hidden frame">
