datalist overhaul (incomplete)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,6 +82,9 @@
                 <select id="playstyle_select" class="text_input"></select>
                 <div id="peri_filters"></div><br>
                 <input id="add_peri_filters_button" type="button" value="+" disabled>
+                <div id="peri_list_container">
+                    <select id="peri_list" class="scrollable_div hidden" size="2"></select>
+                </div>
             </div>
             <div id="profile_frame" class="hidden frame">
                 <input type="button" value="Close" class="close_frame">
