added sort pp and dpi sort buttons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,6 +35,8 @@
                     <div id="border_r_c" class="cut_border_r"></div>
                 </div>
                 <div id="menu_group">
+                    <button id="order_pp" class="order_button active_button"><span>PP ▼</span></button>
+                    <button id="order_dpi" class="order_button"><span>eDPI</span></button>
                     <input id="search_text" type="input" class="text_input" placeholder="Search for Username..." id='name' autocomplete="off">
                 </div>
             </div>
@@ -91,8 +93,8 @@
                 <button class="close_frame"><span>✖</span></button>
             </div>
             <div id="profile_frame" class="hidden frame">
-                <button class="close_frame"><span>✖</span></button>
                 <iframe id="iframe" src="user.html" name="profile_iFrame" frameBorder="0"></iframe>
+                <button class="close_frame"><span>✖</span></button>
             </div>
         </div>
         <div id="shhh"></div>
